Implementação de busca de pedidos

--- a/src/main/webapp/produtos/CadastroProduto.xhtml
+++ b/src/main/webapp/produtos/CadastroProduto.xhtml
@@ -3,21 +3,22 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:o="http://omnifaces.org/ui">
 
-	
-	<ui:define name="titulo">Novo Produto</ui:define>
+
+	<ui:define name="titulo">#{cadastroProdutoBean.editando ? 'Edição de Produto' : 'Novo Produto'}</ui:define>
 
 	<ui:define name="corpo">
 
 		<f:metadata>
-			<f:viewParam name="dummy" />
+			<o:viewParam name="produto" value="#{cadastroProdutoBean.produto}" />
 			<f:event listener="#{cadastroProdutoBean.inicializar}"
 				type="preRenderView" />
 		</f:metadata>
 
 		<h:form>
-			<h1>Novo Produto</h1>
+			<h1>#{cadastroProdutoBean.editando ? 'Edição de Produto' : 'Novo Produto'}</h1>
 
 			<p:messages autoUpdate="true" closable="true" />
 
@@ -51,16 +52,17 @@
 					<f:selectItems value="#{cadastroProdutoBean.categoriasRaizes}"
 						var="categoria" itemLabel="#{categoria.descricao}"
 						itemValue="#{categoria}" />
-						<p:ajax listener="#{cadastroProdutoBean.carregarSubCategorias}" update="subcategoria"/>
+					<p:ajax listener="#{cadastroProdutoBean.carregarSubCategorias}"
+						update="subcategoria" />
 				</p:selectOneMenu>
 
 				<p:outputLabel value="Subcategoria: " for="subcategoria" />
 				<p:selectOneMenu id="subcategoria"
 					value="#{cadastroProdutoBean.produto.categoria}">
 					<f:selectItem itemLabel="Selecione a subcategoria" />
-					<f:selectItems value="#{cadastroProdutoBean.subCategorias}" 
-						var="subcategorias" itemLabel="#{subcategorias.descricao}"  
-						itemValue="#{subcategorias}"/>
+					<f:selectItems value="#{cadastroProdutoBean.subCategorias}"
+						var="subcategorias" itemLabel="#{subcategorias.descricao}"
+						itemValue="#{subcategorias}" />
 				</p:selectOneMenu>
 
 				<p:outputLabel value="Valor unitário: " for="valorUnitario" />
@@ -75,6 +77,7 @@
 					value="#{cadastroProdutoBean.produto.quantidadeEstoque}" />
 
 			</p:panelGrid>
+			
 		</h:form>
 	</ui:define>
 </ui:composition>
