Implementação do cadastro de pedidos

--- a/src/main/webapp/produtos/PesquisaProdutos.xhtml
+++ b/src/main/webapp/produtos/PesquisaProdutos.xhtml
@@ -85,6 +85,7 @@
 			</p:dataTable>
 			<p:confirmDialog header="Exclusão de produto"
 				message="Tem certeza que deseja excluir o produto #{pesquisaProdutosBean.produtoSelecionado.sku}?"
+				showEffect="fade" hideEffect="fade"
 				widgetVar="confirmacaoExclusao" id="confirmacaoExclusaoDialog">
 				<p:button value="Não"
 					onclick="PF('confirmacaoExclusao').hide(); return false;" />
