--- a/src/main/webapp/pedidos/PesquisaPedidos.xhtml
+++ b/src/main/webapp/pedidos/PesquisaPedidos.xhtml
@@ -78,7 +78,9 @@
 	    			<h:outputText value="#{pedido.status.descricao}"/>
 	    		</p:column>
 	    		<p:column style="text-align: center; width: 50px">
-	    			<p:button icon="ui-icon-pencil" title="Editar"/>
+	    			<p:button icon="ui-icon-pencil" title="Editar" outcome="/pedidos/CadastroPedidos">
+	    				<f:param name="pedido" value="#{pedido.id}"/>
+	    			</p:button>
 	    		</p:column>
 	    	</p:dataTable>
 	    	
